--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "init": "npm install --force",
+    "init": "npm install --legacy-peer-deps",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
